--- a/src/scss/blocks/_btn.scss
+++ b/src/scss/blocks/_btn.scss
@@ -2,16 +2,29 @@
   border-radius: 8px;
   background-color: #141718;
   color: #fff;
-//   text-transform: uppercase;
+  //   text-transform: uppercase;
   display: inline-block;
   transition: all 0.3s ease-in;
-  &--m {
-    padding: 12px 56px;
-    font-size: 18px;
+
+  padding: 12px 56px;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: -0.4px;
+  line-height: 1.7;
+
+  &--small{
+    padding: 9px 40px;
+    font-size: 16px;
     font-weight: 500;
     letter-spacing: -0.4px;
-    line-height: 1.7;
+    line-height: 1.75;
+
   }
+  &--wide{
+    width: 100%;
+    
+  }
+
   &:hover {
     opacity: 0.9;
   }
