--- a/src/scss/blocks/_arrivals.scss
+++ b/src/scss/blocks/_arrivals.scss
@@ -9,9 +9,14 @@
     margin-bottom: 48px;
 }
 .arrivals__title {
-    
+
 }
 .headline-4 {
 }
 .arrivals__dots {
+}
+
+.arrivals__slider{
+    display: flex;
+    gap: 24px;
 }
