--- a/src/scss/blocks/_card.scss
+++ b/src/scss/blocks/_card.scss
@@ -2,7 +2,7 @@
   display: grid;
   position: relative;
   gap: 12px;
-  width: 262px;
+  // width: 262px;
   &:hover{
     .card__btn{
         opacity: 1;
@@ -24,6 +24,8 @@
 }
 .card__picture {
   position: relative;
+  background-color: #f3f5f7;
+  text-align: center; 
 }
 .card__new {
   position: absolute;
