--- a/src/html/blocks/templates/arrivals-swiper.html
+++ b/src/html/blocks/templates/arrivals-swiper.html
@@ -3,7 +3,7 @@
     <!-- Additional required wrapper -->
     <div class="swiper-wrapper">
       <!-- Slides -->
-     @@loop('card.html','./data/arrivals.json')
+     @@loop('card-swiper.html','./data/arrivals.json')
       
     </div>
  
