--- a/src/html/blocks/templates/card-swiper.html
+++ b/src/html/blocks/templates/card-swiper.html
@@ -1,4 +1,4 @@
-
+<div class="swiper-slide">
   <article class="card">
     <div class="card__picture">
       <img
@@ -30,4 +30,4 @@
     </div>
     <a href="#" class="card__link"></a>
   </article>
-
+</div>
