elegant store mobile ready

--- a/src/html/blocks/templates/card.html
+++ b/src/html/blocks/templates/card.html
@@ -25,7 +25,7 @@
           <img src="./img/icons/StarFill.svg" alt="star" />
           <img src="./img/icons/StarFill.svg" alt="star" /> -->
       </div>
-      <div class="card__title">@@title</div>
+      <div class="card__title card__title--elipsis">@@title</div>
       <div class="card__price">@@price</div>
     </div>
     <a href="#" class="card__link"></a>
