--- a/src/scss/base/_containers.scss
+++ b/src/scss/base/_containers.scss
@@ -10,7 +10,10 @@
 		(100% - var(--container-width)) / 2 + var(--container-padding)
 	);
 
-	@media (max-width: var(--laptop-size)) {
+	// @media (max-width: var(--laptop-size)) {
+	// 	padding-left: var(--container-padding);
+	// }
+	@include tablet(){
 		padding-left: var(--container-padding);
 	}
 }
@@ -21,7 +24,11 @@
 		(100% - var(--container-width)) / 2 + var(--container-padding)
 	);
 
-	@media (max-width: var(--laptop-size)) {
+	// @media (max-width: var(--laptop-size)) {
+	// 	padding-right: var(--container-padding);
+	// }
+
+	@include tablet(){
 		padding-right: var(--container-padding);
 	}
 }
