--- a/src/scss/blocks/_arrivals.scss
+++ b/src/scss/blocks/_arrivals.scss
@@ -1,5 +1,8 @@
 .arrivals {
     padding: 48px 0;
+    @include mobile{
+        padding: 32px 0 0;
+    }
 }
 
 .arrivals__row {
@@ -7,13 +10,14 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 48px;
+    @include mobile{
+        margin-bottom: 40px;
+    }
 }
-.arrivals__title {
-
-}
-.headline-4 {
-}
-.arrivals__dots {
+.arrivals__dots{
+    @include mobile{
+        display: none;
+    }
 }
 
 .arrivals__slider{
