--- a/src/scss/blocks/_bestseller.scss
+++ b/src/scss/blocks/_bestseller.scss
@@ -1,15 +1,26 @@
 .bestseller {
     padding-bottom: 100px;
+    @include mobile{
+        padding-bottom: 40px;
+    }
+    
 }
-.container {
-}
+
 .bestseller__title {
     padding: 48px 0;
+    @include mobile{
+        text-align: center;
+        padding: 40px 0 16px;
+    }
 }
-.headline-4 {
-}
+
 .bestseller__cards {
     display: grid;
     gap: 48px 24px;
     grid-template-columns: repeat(auto-fit, minmax(262px, 1fr));
+
+    @include mobile{
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        gap: 16px 8px;
+    }
 }
