--- a/src/scss/blocks/_btn.scss
+++ b/src/scss/blocks/_btn.scss
@@ -12,16 +12,26 @@
   letter-spacing: -0.4px;
   line-height: 1.7;
 
+  @include mobile{
+    font-size: 16px;
+  }
+
   &--small{
     padding: 9px 40px;
     font-size: 16px;
     font-weight: 500;
     letter-spacing: -0.4px;
     line-height: 1.75;
+    @include mobile{
+      font-size: 14px;
+      padding: 6px 40px;
+    }
 
   }
   &--wide{
     width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
     
   }
 
