--- a/src/scss/blocks/_card.scss
+++ b/src/scss/blocks/_card.scss
@@ -63,6 +63,9 @@
     left: 16px;
     bottom: 16px;
     right: 16px;
+    @include mobile{
+      display: none;
+    }
 }
 .card__desc {
   display: grid;
@@ -78,6 +81,11 @@
   font-size: 16px;
   line-height: 1.625;
   color: #141718;
+}
+.card__title--elipsis{
+  text-overflow: ellipsis;
+  overflow: hidden;
+  text-wrap: nowrap;
 }
 .card__price {
     color: #121212;
