--- a/src/scss/blocks/_collection.scss
+++ b/src/scss/blocks/_collection.scss
@@ -4,10 +4,20 @@
 
 .collection__title {
     padding: 48px 0;
+    @include mobile{
+        text-align: center;
+        padding: 40px 0 16px;
+    }
 }
 
 .collection__grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 24px;
+
+    @include mobile{
+        grid-template-columns: repeat(1, 1fr);
+        grid-auto-rows: 180px;
+        gap: 16px;
+    }
 }
