--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -2,6 +2,9 @@
   padding: 80px 0 32px;
   background-color: #141718;
   color: #e8ecef;
+  @include mobile{
+    padding: 48px 0;
+  }
 }
 .container {
 }
@@ -10,9 +13,17 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  @include mobile{
+   flex-direction: column;
+   align-items: center;
+   gap: 40px; 
+  }
 }
 .footer__row--top{
 	margin-bottom: 48px;
+  @include mobile{
+    margin-bottom: 40px;
+  }
 }
 .footer__title {
   display: flex;
@@ -20,6 +31,10 @@
   gap: 32px;
   align-items: center;
   flex-shrink: 0;
+  @include mobile{
+   flex-direction: column;
+   gap: 16px; 
+  }
 }
 .footer__logo {
   font-family: var(--font-accent);
@@ -35,6 +50,10 @@
   flex-shrink: 0;
   width: 1px;
   height: 24px;
+  @include mobile{
+    height: 1px;
+    width: 24px;
+  }
 }
 .footer__store {
   color: #e8ecef;
@@ -51,11 +70,19 @@
   }
   font-size: 14px;
   line-height: 1.57;
+  @include mobile{
+   flex-direction: column;
+   gap: 32px; 
+  }
 }
 .footer__row--border {
 	border-top: 0.5px solid #6c7275;
 	padding-top: 12px;
 	padding-bottom: 20px;
+  @include mobile{
+   padding: 24px 0;
+   gap: 32px; 
+  }
 }
 .footer__copyright {
 	display: flex;
@@ -68,9 +95,25 @@
 	a{
 		font-weight: 600;
 	}
+  @include mobile{
+    flex-direction: column-reverse;
+  }
+  &-links{
+    gap: 28px;
+    display: flex;
+    @include mobile{
+     
+      
+    }
+    
+  }
 }
 .footer__social {
 	display: flex;
 	gap: 24px;
 	align-items: center;
+  @include mobile{
+   order: -1; 
+   
+  }
 }
