--- a/src/scss/blocks/_hero.scss
+++ b/src/scss/blocks/_hero.scss
@@ -5,8 +5,22 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 820px;
+
   @media (-webkit-min-device-pixel-ratio:2), (min-resolution: 192dpi){
     background-image: url("./../img/HeroBg2x.jpg");
+  }
+
+  @include tablet {
+    height: 500px;
+  }
+
+  @include mobile{
+    height: auto;
+    padding-bottom: 390px;
+    background-image: url("./../img/bg-mobile.jpg");
+    @media (-webkit-min-device-pixel-ratio:2), (min-resolution: 192dpi){
+      background-image: url("./../img/bg-mobile@2x.jpg");
+    }
   }
 }
 
@@ -18,6 +32,16 @@
   padding-right: calc((100% - var(--container-width)) / 2);
   display: flex;
   align-items: center;
+  @include tablet{
+    padding-right: var(--container-padding);
+  }
+  @include mobile{
+    padding: 40px var(--container-padding);
+    text-align: center;
+    justify-content: center;
+    max-width: 375px;
+    margin: 0 auto;
+  }
 }
 
 .hero__content {
@@ -25,11 +49,19 @@
 }
 
 .hero__title {
+  text-wrap: balance;
   font-size: 80px;
   line-height: 1;
   font-weight: 500;
   letter-spacing: -3px;
   font-family: var(--font-accent);
+  margin-bottom: 8px;
+  @include tablet(){
+    font-size: 60px;
+  }
+  @include mobile{
+    font-size: 40px;
+  }
   span {
     color: #377dff;
   }
@@ -39,8 +71,10 @@
   font-size: 20px;
   margin-bottom: 28px;
   line-height: 1.6;
+
+  @include mobile{
+    font-size: 16px;
+    margin-bottom: 16px;
+  }
 }
-.hero__link {
-}
-.btn {
-}
+
