--- a/src/scss/blocks/_plate.scss
+++ b/src/scss/blocks/_plate.scss
@@ -31,6 +31,11 @@
   left: 32px;
   bottom: 40px;
   right: 32px;
+  @include tablet{
+    left: 20px;
+    right: 20px;
+    bottom: 20px;
+  }
 }
 .plate-tall {
   grid-row: 1/3;
@@ -42,6 +47,10 @@
   font-weight: 500;
   line-height: 1.11;
   letter-spacing: -0.6px;
+  @include tablet{
+    font-size: 28px;
+    margin-bottom: 8px;
+  }
 }
 .plate__link {
   display: inline-flex;
@@ -53,4 +62,7 @@
   line-height: 1.75;
   letter-spacing: -0.4px;
   border-bottom: 1px solid #121212;
+  @include tablet{
+    font-size: 14px;
+  }
 }
