--- a/src/scss/blocks/_tagline.scss
+++ b/src/scss/blocks/_tagline.scss
@@ -13,7 +13,10 @@
 .tagline__desc {
   font-weight: 600;
   line-height: 22px;
-  
+
+  @include mobile {
+    font-size: 12px;
+  }
 }
 .tagline__link {
   font-weight: 500;
@@ -23,9 +26,17 @@
   align-items: center;
   color: #ffab00;
   border-bottom: 1px solid #ffab00;
+  @include mobile {
+    display: none;
+  }
 }
-.tagline__close{
-position: absolute;
-top: 10px;
-right: 16px;
+.tagline__close {
+  position: absolute;
+  top: 10px;
+  right: 16px;
+  @include mobile {
+    svg path {
+      fill: #ffffff !important;
+    }
+  }
 }
